- VersionResolver becomes a kind of adapter, neater abstraction. - now supporting input files - now supporting relative date via 'days back' -d 30 - now supporting forcing a specific adapter i.e -a svn.

--- a/NChurn.Core/NChurn.Core.csproj
+++ b/NChurn.Core/NChurn.Core.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Adapters\IVersioningAdapter.cs" />
     <Compile Include="Adapters\Svn\SvnAdapter.cs" />
     <Compile Include="Adapters\TF\TFAdapter.cs" />
-    <Compile Include="Adapters\AdapterResolver.cs" />
+    <Compile Include="Adapters\AutoDiscoveryAdapter.cs" />
     <Compile Include="Analyzers\AnalysisResult.cs" />
     <Compile Include="Analyzers\Analyzer.cs" />
     <Compile Include="Adapters\IAdapterResolver.cs" />
