cutoff in precent docs changes

--- a/NChurn.Core/NChurn.Core.csproj
+++ b/NChurn.Core/NChurn.Core.csproj
@@ -55,6 +55,9 @@
     <Compile Include="Analyzers\AnalysisResult.cs" />
     <Compile Include="Analyzers\Analyzer.cs" />
     <Compile Include="Adapters\IAdapterResolver.cs" />
+    <Compile Include="Processors\Cutoff\MinimalCutoffProcessor.cs" />
+    <Compile Include="Processors\Cutoff\PrecentCutoffProcessor.cs" />
+    <Compile Include="Processors\IProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporters\BaseAnalysisReporter.cs" />
     <Compile Include="Reporters\CSVReporter.cs" />
@@ -67,6 +70,7 @@
     <Compile Include="Support\SystemExts.cs" />
     <Compile Include="Support\Win32\Win32CommandRunnerDataSource.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
